2020-11-05  Carlos Garcia Campos  <cgarcia@igalia.com>

        WebDriver: handle surrogate pairs in keyboard actions
        https://bugs.webkit.org/show_bug.cgi?id=218279

        Reviewed by Brian Burg.

        Remove expectations for tests that are now passing.

        * TestExpectations.json:

2020-11-03  Lauro Moura  <lmoura@igalia.com>

        [WebDriver] Update config.json after tools update in r269235
        https://bugs.webkit.org/show_bug.cgi?id=218512

        Reviewed by Carlos Garcia Campos.

        * imported/w3c/config.json: Add missing value to https list.

2020-10-27  Carlos Garcia Campos  <cgarcia@igalia.com>

        WebDriver: sequence of char key press is not supported
        https://bugs.webkit.org/show_bug.cgi?id=217951

        Reviewed by Brian Burg.

        Remove expectations for test that is now passing.

        * TestExpectations.json:

2020-10-22  Carlos Garcia Campos  <cgarcia@igalia.com>

        WebDriver: handle key events with non-ASCII unicode code point
        https://bugs.webkit.org/show_bug.cgi?id=217950

        Reviewed by Carlos Alberto Lopez Perez.

        Remove expectations for tests that are now passing.

        * TestExpectations.json:

2020-10-22  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update W3C WebDriver imported tests.

        * TestExpectations.json:
        * imported/w3c/importer.json:
        * imported/w3c/tools/webdriver/webdriver/client.py:
        * imported/w3c/tools/wptrunner/wptrunner/browsers/android_weblayer.py:
        * imported/w3c/tools/wptrunner/wptrunner/browsers/chrome.py:
        * imported/w3c/tools/wptrunner/wptrunner/browsers/chrome_android.py:
        * imported/w3c/tools/wptrunner/wptrunner/environment.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/base.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/executormarionette.py:
        * imported/w3c/tools/wptrunner/wptrunner/executors/executorselenium.py: